--- a/src/chrono_models/vehicle/CMakeLists.txt
+++ b/src/chrono_models/vehicle/CMakeLists.txt
@@ -430,16 +430,28 @@ set(CVM_M113_FILES
 source_group("m113" FILES ${CVM_M113_FILES})
 
 set(CVM_MMX_FILES
-    mmx/MMX_PaddleTire.h
-    mmx/MMX_PaddleTire.cpp
-    mmx/MMX_SimpleTire.h
-    mmx/MMX_SimpleTire.cpp
+    mmx/MMX_Tire_Sphere.h
+    mmx/MMX_Tire_Sphere.cpp
+    mmx/MMX_Tire_Cylinder.h
+    mmx/MMX_Tire_Cylinder.cpp
+    mmx/MMX_Tire_CylinderMesh.h
+    mmx/MMX_Tire_CylinderMesh.cpp
+    mmx/MMX_Tire_Simple.h
+    mmx/MMX_Tire_Simple.cpp
+    mmx/MMX_Tire_SimpleMesh.h
+    mmx/MMX_Tire_SimpleMesh.cpp
+    mmx/MMX_Tire_Paddle.h
+    mmx/MMX_Tire_Paddle.cpp
+    mmx/MMX_Tire_PaddleMesh.h
+    mmx/MMX_Tire_PaddleMesh.cpp
+    mmx/MMX_Tire_DLR1.h
+    mmx/MMX_Tire_DLR1.cpp
     mmx/MMX_Wheel.h
     mmx/MMX_Wheel.cpp
-    mmx/MMX_TestWheel.h
-    mmx/MMX_TestWheel.cpp
-    mmx/MMX_TestTire.h
-    mmx/MMX_TestTire.cpp
+    mmx/MMX_Wheel_Sphere.h
+    mmx/MMX_Wheel_Sphere.cpp
+    mmx/MMX_Wheel_Cylinder.h
+    mmx/MMX_Wheel_Cylinder.cpp
 )
 source_group("mmx" FILES ${CVM_MMX_FILES})
 
