- Fix issue where CH_FACTORY_REGISTER was causing segfaults. Not sure why. - Change ChMulticoreDataManager to use marchive << CHNVP(dataManager) style archiving. Using pointers directly instead of derefrencing. - Add ChMulticoreDataManager archiving demo

--- a/src/demos/multicore/CMakeLists.txt
+++ b/src/demos/multicore/CMakeLists.txt
@@ -32,6 +32,7 @@ SET(DEMOS
     demo_MCORE_snowMPM
     demo_MCORE_particlesNSC
     demo_MCORE_cratering
+    demo_MCORE_archive_data_manager
 )
 
 # Add programs that require OpenGL
